Fixed alignment on related products. Changed featured products to match woocommerce markup.

--- a/assets/sass/woocommerce/_product-lists.scss
+++ b/assets/sass/woocommerce/_product-lists.scss
@@ -1,4 +1,4 @@
-.products {
+ul.products {
 	@extend .row;
 	padding: 0;
 	list-style-type: none;
